# duatic_dynaarm_demo

./: .pre-commit-config.yaml  README.md  repos.list
duatic_dynaarm_end_effectors/: CMakeLists.txt  package.xml
duatic_dynaarm_end_effectors/launch/: end_effector.launch.py
duatic_dynaarm_end_effectors/urdf/: freedrive_handle.urdf.xacro  freedrive_handle_standalone.urdf.xacro  hook.urdf.xacro  hook_standalone.urdf.xacro  shovel.urdf.xacro  shovel_gripper_left.urdf.xacro  shovel_gripper_right.urdf.xacro  shovel_gripper_standalone.urdf.xacro  shovel_standalone.urdf.xacro  weight_5kg.urdf.xacro  weight_5kg_standalone.urdf.xacro
duatic_dynaarm_single_example/: dynaarm_single_example.md
duatic_dynaarm_single_example/duatic_dynaarm_single_example/: CMakeLists.txt  package.xml
duatic_dynaarm_single_example/duatic_dynaarm_single_example/config/: controllers.yaml  controllers_sim.yaml
duatic_dynaarm_single_example/duatic_dynaarm_single_example/launch/: mock.launch.py  real.launch.py  sim.launch.py
duatic_dynaarm_single_example/duatic_dynaarm_single_example_description/: CMakeLists.txt  package.xml
duatic_dynaarm_single_example/duatic_dynaarm_single_example_description/launch/: view.launch.py
duatic_dynaarm_single_example/duatic_dynaarm_single_example_description/urdf/: dynaarm_single_example.urdf.xacro
duatic_dynaarm_single_example/duatic_dynaarm_single_example_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
duatic_dynaarm_single_example/duatic_dynaarm_single_example_moveit_config/config/: moveit.rviz
duatic_dynaarm_single_example/duatic_dynaarm_single_example_moveit_config/launch/: moveit.launch.py
duatic_dynaarm_single_example/duatic_dynaarm_single_example_moveit_config/scripts/: keyboard_pose.py
dynaarm_single_example/dynaarm_single_example/: CMakeLists.txt  package.xml
dynaarm_single_example/dynaarm_single_example/launch/: sim.launch.py
dynaarm_single_example/dynaarm_single_example/test/: test_launch_mock.py  test_launch_sim.py
dynaarm_single_example/dynaarm_single_example_description/urdf/: dynaarm_single_example.urdf.xacro
