<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duatic_dynaarm_single_example_description</name>
  <version>1.0.0</version>
  <description>Description package for the single arm example</description>
  <author email="lnachtigall@duatic.com">Lennart Nachtigall</author>
  <author email="tschwarzer@duatic.com">Timo Schwarzer</author>

  <maintainer email="tschwarzer@duatic.com">Timo Schwarzer</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>duatic_dynaarm_description</depend>
  <!--NOTE this is only needed for the ros2control part of the xacro-->
  <depend>duatic_dynaarm_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
